--- a/app/src/main/res/layout/activity_file_browser.xml
+++ b/app/src/main/res/layout/activity_file_browser.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="vm"
-            type="com.merlin.browser.model.FileBrowserModel" />
+            type="com.file.model.FileBrowserModel" />
         <variable
             name="client"
             type="com.merlin.api.Client" />
