--- a/FileManager/src/main/res/layout/activity_task.xml
+++ b/FileManager/src/main/res/layout/activity_task.xml
@@ -6,12 +6,16 @@
             name="vm"
             type="com.file.model.TaskModel" />
     </data>
-    <LinearLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         binding:createModel="@{true}"
         android:background="@drawable/round_corner_gray"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="10dp">
-    </LinearLayout>
+        android:paddingTop="25dp">
+        <androidx.recyclerview.widget.RecyclerView
+            binding:adapter="@{vm.adapter}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
