--- a/FileManager/src/main/res/values/styles.xml
+++ b/FileManager/src/main/res/values/styles.xml
@@ -53,4 +53,13 @@
         <item name="android:layout_height">@dimen/listIconNormal</item>
     </style>
 
+    <style name="taskActivityStyle" parent="android:Theme.Wallpaper.NoTitleBar">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 </resources>
