--- a/FileManager/src/main/res/layout/item_list_file.xml
+++ b/FileManager/src/main/res/layout/item_list_file.xml
@@ -24,7 +24,7 @@
     <RelativeLayout
         android:clickable="true"
         binding:enableClick="@{Clicker.multiClick(meta,true)}"
-        android:background="@{meta.accessible?R.drawable.selector_round_dark_corner_small:R.drawable.round_dark_corner_small_disable}"
+        binding:backgroundResource="@{meta.accessible?R.drawable.selector_round_dark_corner_small:R.drawable.round_dark_corner_small_disable}"
         android:layout_marginBottom="4dp"
         android:layout_width="match_parent"
         android:layout_height="@dimen/listItemNormal">
