--- a/FileManager/src/main/res/values/styles.xml
+++ b/FileManager/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
         <item name="android:layout_height">@dimen/listIconNormal</item>
     </style>
 
-    <style name="taskActivityStyle" parent="android:Theme.Wallpaper.NoTitleBar">
+    <style name="taskActivityStyle" parent="android:Theme.Translucent.NoTitleBar.Fullscreen">
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
@@ -61,5 +61,6 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
     </style>
 </resources>
