--- a/FileManager/src/main/res/layout/activity_photo_preview.xml
+++ b/FileManager/src/main/res/layout/activity_photo_preview.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="vm"
+            type="com.file.model.PhotoPreViewModel" />
+    </data>
+    <com.github.chrisbanes.photoview.PhotoView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+</layout>
