--- a/FileManager/src/main/res/layout/activity_photo_preview.xml
+++ b/FileManager/src/main/res/layout/activity_photo_preview.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:binding="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="vm"
             type="com.file.model.PhotoPreViewModel" />
     </data>
     <com.github.chrisbanes.photoview.PhotoView
+        binding:src="@{vm.image}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
