--- a/FileManager/src/main/res/layout/activity_photo_preview.xml
+++ b/FileManager/src/main/res/layout/activity_photo_preview.xml
@@ -8,7 +8,9 @@
     </data>
     <com.github.chrisbanes.photoview.PhotoView
         binding:src="@{vm.image}"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:scaleType="center"
+        binding:createModel="@{true}"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </layout>
