--- a/FileManager/src/main/res/values/styles.xml
+++ b/FileManager/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
     </style>
 
     <style name="editTextNormal" parent="titleNormalTextView">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:focusable">true</item>
         <item name="android:focusableInTouchMode">true</item>
