Add adapter to gradle

--- a/Test/src/main/res/layout/activity_main.xml
+++ b/Test/src/main/res/layout/activity_main.xml
@@ -14,5 +14,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{vm.ddd}" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:adapter="@{vm.snapAdapter}"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </FrameLayout>
 </layout>
