--- a/Test/src/main/res/layout/test_layout.xml
+++ b/Test/src/main/res/layout/test_layout.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="#0f0"
+    android:layout_marginBottom="5dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <Button
         android:text="sfdasdfasdfas"
         android:layout_width="wrap_content"
